# PkgXtractor

./: .gitignore  BUILD_PKGXTRACTOR.md  CMakeLists-PkgXtractor-Qt.txt  CMakeLists.txt  CMakeSettings.json  CMakeWindowsPresets.json  MAINTENANCE_TOOL_GUIDE.md  README.md  build_output.txt  tree.txt
.github/workflows/: nightly.yml  release.yml
build-win/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  TracyTargets.cmake  build.ninja  cmake_install.cmake  compile_commands.json  embedded-resources.lib
build-win/__cmrc_embedded-resources/: lib_.cpp
build-win/src/common/: scm_rev.cpp
build-win/src/imgui/renderer/: cmake_install.cmake
build-win/src/imgui/renderer/generated_fonts/imgui_fonts/: proggyvector_regular.ttf.g.cpp
build-win/src/video_core/host_shaders/: cmake_install.cmake
scripts/: compare_report_delta.py
shadPS4-Windows_0.12.0/: BUILD_PKGXTRACTOR.md  CMakeLists.txt  CONTRIBUTING.md  README.md
shadPS4-Windows_0.12.0/build-win/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  TracyTargets.cmake  build.ninja  cmake_install.cmake  compile_commands.json  embedded-resources.lib
shadPS4-Windows_0.12.0/build-win/src/common/: scm_rev.cpp
shadPS4-Windows_0.12.0/build-win/src/imgui/renderer/: ImGui_Resources.lib  cmake_install.cmake
shadPS4-Windows_0.12.0/build-win/src/imgui/renderer/generated_fonts/imgui_fonts/: proggyvector_regular.ttf.g.cpp
shadPS4-Windows_0.12.0/build-win/src/video_core/host_shaders/: cmake_install.cmake
shadPS4-Windows_0.12.0/build-win/src/video_core/host_shaders/include/video_core/host_shaders/: fault_buffer_process_comp.h
shadPS4-Windows_0.12.0/cmake/: DetectQtInstallation.cmake
shadPS4-Windows_0.12.0/documents/: building-windows.md
shadPS4-Windows_0.12.0/src/: shadps4.rc
src/: pkgxtractor.rc
src/common/: config.cpp  discord_rpc_handler.cpp  io_file.cpp  path_util.h
src/core/crypto/: crypto.cpp
src/core/file_format/: pkg.cpp  pkg.h  playgo_chunk.h  psf.cpp
src/qt_gui/: control_settings.cpp  control_settings.h  game_info.h  hotkeys.cpp  hotkeys.h  main_window.cpp  pkg_viewer.cpp  settings_dialog.cpp  settings_dialog.h
tools/pkgxtractor/: compare_extractions.py  gui.cpp  gui.cpp.backup  main.cpp
tools/pkgxtractor/standalone/: README.md  pkgxtractor-qt.progress  pkgxtractor-qt.state
tools/pkgxtractor_qt/: CMakeLists.txt  gui.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
